tests/baselines/reference/interfaceMayNotBeExtendedWitACall.errors.txt
interfaceMayNotBeExtendedWitACall.ts(3,24): error TS2499: An interface can only extend an identifier/qualified-name with optional type arguments.


==== interfaceMayNotBeExtendedWitACall.ts (1 errors) ====
    interface color {}
    
    interface blue extends color() { // error
                           ~~~~~~~
!!! error TS2499: An interface can only extend an identifier/qualified-name with optional type arguments.
    
    }
    